# rfp-analyzer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  azure.yaml  docker-compose.yml  main.py  pyproject.toml  test.http
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
EfpAnalyzer/: EfpAnalyzer.slnx
EfpAnalyzer/EfpAnalyzer/: EfpAnalyzer.csproj  Program.cs
EfpAnalyzer/EfpAnalyzer/Components/: App.razor  _Imports.razor
EfpAnalyzer/EfpAnalyzer/Models/: ComparisonModels.cs  EvaluationModels.cs  ProcessingModels.cs  ScoringModels.cs
EfpAnalyzer/EfpAnalyzer/Services/: ComparisonService.cs  DocumentProcessorService.cs  ScoringService.cs
EfpAnalyzer/tests/EfpAnalyzer.Tests/: EfpAnalyzer.Tests.csproj  UnitTest1.cs
RfpAnalyzer/: RfpAnalyzer.slnx
RfpAnalyzer/RfpAnalyzer/Components/: _Imports.razor
RfpAnalyzer/RfpAnalyzer/Models/: ScoringModels.cs
RfpAnalyzer/RfpAnalyzer/Services/: ComparisonService.cs  ScoringService.cs
RfpAnalyzer/RfpAnalyzer/wwwroot/: app.css
app/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scoring_guide.md
app/.streamlit/: config.toml
app/RfpAnalyzer/: Program.cs  RfpAnalyzer.csproj  appsettings.Development.json  appsettings.json  appsettings.template.json
app/RfpAnalyzer/Components/: App.razor
app/RfpAnalyzer/Components/Pages/: Evaluate.razor  Extract.razor  Home.razor  Upload.razor
app/RfpAnalyzer/Models/: ComparisonModels.cs  EvaluationModels.cs  ProcessingModels.cs
app/RfpAnalyzer/Services/: ComparisonService.cs  DocumentProcessorService.cs  ScoringService.cs
app/services/: __init__.py  blob_storage_client.py  comparison_agent.py  content_understanding_client.py  document_intelligence_client.py  document_processor.py  logging_config.py  pipelines.py  processing_queue.py  report_generator.py  retry_utils.py  scoring_agent.py  scoring_agent_v2.py  session_state_manager.py  telemetry.py  token_utils.py  utils.py
app/tests/: conftest.py  test_blob_storage_client.py  test_comparison_agent.py  test_document_processor.py  test_logging_config.py  test_processing_queue.py  test_report_generator.py  test_retry_utils.py  test_scoring_agent.py  test_scoring_agent_v2.py  test_session_state_manager.py  test_telemetry.py  test_token_utils.py  test_utils.py
app/tests/RfpAnalyzer.Tests/: RfpAnalyzer.Tests.csproj
app/tests/RfpAnalyzer.Tests/Models/: ComparisonModelsTests.cs  EvaluationModelsTests.cs  ProcessingQueueTests.cs  ScoringModelsTests.cs
app/tests/RfpAnalyzer.Tests/Services/: ComparisonServiceTests.cs  DocumentProcessorServiceTests.cs  ScoringServiceTests.cs
app/ui/: __init__.py  components.py  download.py  landing.py  step1_upload.py  step2_extract.py  step3_criteria.py  step3_evaluate.py  step4_score.py  styles.py
docs/: ARCHITECTURE.md  QUICKSTART.md  README.md
infra/: abbreviations.json  main.bicep  main.parameters.json  resources.bicep
infra/hooks/: postprovision.ps1  postprovision.sh
(+14 files in other folders)
