[project]
name = "rfp-analyzer"
version = "0.1.0"
description = "RFP Analyzer using Azure Content Understanding and Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.55.0",
    "agent-framework>=1.0.0rc3",
    "azure-identity>=1.26.0b2",
    "azure-ai-documentintelligence>=1.0.2",
    "python-dotenv>=1.2.2",
    "pydantic>=2.12.5",
    "openai>=2.26.0",
    "requests>=2.32.5",
    "azure-monitor-opentelemetry>=1.8.6",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "python-docx>=1.2.0",
    "plotly>=6.6.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=68.1",
    "markdown>=3.10.2",
]

[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
