[project]
name = "rfp-analyzer"
version = "0.3.0"
description = "RFP Analyzer using Azure Content Understanding and Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.56.0",
    "agent-framework>=1.0.1",
    "azure-identity>=1.26.0b2",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-storage-blob>=12.25.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.12.5",
    "openai>=2.31.0",
    "requests>=2.32.5",
    "azure-monitor-opentelemetry>=1.8.7",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "python-docx>=1.2.0",
    "plotly>=6.7.0",
    "pypdf>=5.0.0",
    "msoffcrypto-tool>=5.4.0",
]

[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
